# aoc2020

./: .gitignore  README.md
ex01/: Cargo.toml
ex01/src/: main.rs
ex01/src/lib/: compute.rs
ex02/: Cargo.toml
ex02/src/: main.rs
ex02/src/lib/: compute.rs
ex03/: Cargo.toml
ex03/src/: main.rs
ex03/src/lib/: map.rs
ex04/: Cargo.toml
ex04/src/: main.rs
ex04/src/lib/: mod.rs  parser.rs  passport.rs
ex05/: Cargo.toml
ex05/src/: main.rs
ex05/src/lib/: compute.rs
ex06/: Cargo.toml
ex06/src/: main.rs
ex06/src/lib/: compute.rs  parser.rs
ex07/: Cargo.toml
ex07/src/: main.rs
ex07/src/lib/: mod.rs  parser.rs  rules.rs
ex08/: Cargo.toml
ex08/src/: main.rs
ex08/src/lib/: instruction.rs  mod.rs  parser.rs  virtual_machine.rs  vm.rs
ex09/: Cargo.toml
ex09/src/: main.rs
ex09/src/lib/: compute.rs
ex10/: Cargo.toml
ex10/src/: main.rs
ex11/: Cargo.toml
ex11/src/: main.rs
ex12/: Cargo.toml
ex12/src/: main.rs
ex13/: Cargo.toml
ex13/src/: main.rs
ex14/: Cargo.toml
ex14/src/: main.rs
ex14/src/lib/: compute.rs  mod.rs  parser.rs
ex15/: Cargo.toml
ex15/src/: main.rs
ex16/: Cargo.toml
ex16/src/: main.rs
ex17/: Cargo.toml
ex17/src/: main.rs
ex18/: Cargo.toml
ex18/src/: main.rs
ex19/: Cargo.toml
ex19/src/: main.rs
ex20/: Cargo.toml
ex20/src/: main.rs
ex21/: Cargo.toml
ex21/src/: main.rs
ex22/: Cargo.toml
ex22/src/: main.rs
ex23/: Cargo.toml
ex23/src/: main.rs
ex24/: Cargo.toml
ex24/src/: main.rs
ex24/src/lib/: compute.rs  mod.rs  parser.rs
ex25/: Cargo.toml
ex25/src/: main.rs
(+33 files in other folders)
