[package]
name = "ex08"
version = "0.1.0"
authors = ["k0pernicus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_helper = { path = "../../aoc_helper", version = "0.1.0" }
aoc2020_vm = { git = "ssh://git@github.com/k0pernicus/aoc2020_vm.git", rev = "dad2a3c422852fbca36ad901f30d6a60ec698f0b" }
