[package]
name = "ex14"
version = "0.1.0"
authors = ["k0pernicus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_helper = { path = "../../aoc_helper", version = "0.1.0" }
bit-array = "0.4.4"
lazy_static = "1.4.0"
regex = "1.4.2"
